Update CSS and HTML
Signed-off-by: 0x4248 <60709927+0x4248@users.noreply.github.com>

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,6 +37,10 @@ img {
   max-width: 500px;
 }
 
+.logo {
+  width: 100%;
+}
+
 .highlight .cm {
   color: var(--light-gray);
 }
@@ -263,4 +267,10 @@ strong {
 
 hr {
     background: var(--background-colour-light);
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    display: none;
+  }
 }
