--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+          <img src="{{site.logo | relative_url}}" alt="Logo" class="logo"/>
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
@@ -43,6 +43,13 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+
+        {% if site.show_release %}
+        <ul class="downloads">
+          <li><a href="{{ site.github.release_url }}">Download <strong>Latest Release</strong></a></li>
+        </ul>
+        {% endif %}
+
       </header>
       <section>
 
