--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -289,17 +289,17 @@ hr {
 
 section {
   opacity: 0;
-  animation: animation-in 1s forwards 0.2s cubic-bezier( 0.86, 0, 0.07, 1 );
+  animation: animation-in 1s forwards 0.1s cubic-bezier( 0.86, 0, 0.07, 1 );
 }
 
 section h1 {
   opacity: 0;
-  animation: animation-in 1s forwards 0.4s cubic-bezier( 0.86, 0, 0.07, 1 );
+  animation: animation-in 1s forwards 0.2s cubic-bezier( 0.86, 0, 0.07, 1 );
 }
 
 section h2, h3, h4, h5, h6 {  
   opacity: 0;
-  animation: animation-in 1s forwards 0.4s cubic-bezier( 0.86, 0, 0.07, 1 );
+  animation: animation-in 1s forwards 0.3 cubic-bezier( 0.86, 0, 0.07, 1 );
 }
 
 section ul, ol {
