--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -198,17 +198,6 @@ h6 {
     color: var(--text-colour);
 }
 
-h2 {
-    color: var(--text-colour);
-}
-
-h3,
-h4,
-h5,
-h6 {
-    color: var(--text-colour);
-}
-
 a {
     color: var(--text-alt-colour);
 }
@@ -297,7 +286,7 @@ section h1 {
   animation: animation-in 1s forwards 0.2s cubic-bezier( 0.86, 0, 0.07, 1 );
 }
 
-section h2, section h3, section h4, section h5, section h6 {  
+h2, h3, h4, h5, h6 {
   opacity: 0;
   animation: animation-in 1s forwards 0.3 cubic-bezier( 0.86, 0, 0.07, 1 );
 }
@@ -308,6 +297,7 @@ section ul, ol {
 }
 
 section p{
+  opacity: 0;
   animation: animation-in 0.8s forwards 0.4s cubic-bezier( 0.86, 0, 0.07, 1 );
 }
 
