--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,11 +28,6 @@ html {
       var(--dot-color);     
 }
 
-img {
-  max-width: 500px;
-}
-
-
 body {
     background-color: transparent;
     color: var(--light-gray);
@@ -156,6 +151,18 @@ section {
   .logo {
     display: none;
   }
+
+  section {
+    width: 100%;
+  }
+
+  header {
+    width: 100%;
+  }
+
+  .wrapper {
+    width: 100%;
+  }
 }
 
 @keyframes  animation-in {
@@ -194,7 +201,8 @@ section p{
 }
 
 section img {
-  max-width: 100%;
+  max-width: 80%;
+  border-radius: 10px;
   opacity: 0;
   animation: animation-in 1s forwards 0.4s cubic-bezier( 0.86, 0, 0.07, 1 );
 }
